fix issues with generation

--- a/template_dir/build.sbt.mustache
+++ b/template_dir/build.sbt.mustache
@@ -3,6 +3,11 @@ name := "{{artifactId}}"
 organization := "{{groupId}}"
 scalaVersion := "2.12.8"
 
+resolvers += Resolver.url("LiveAgent Snapshots", url("s3://snapshots.mvn-repo.liveagent.com.s3.amazonaws.com"))(Resolver.ivyStylePatterns)
+publishMavenStyle := false
+publishTo := Some(Resolver.url("LiveAgent Snapshots", url("s3://snapshots.mvn-repo.liveagent.com.s3.amazonaws.com"))(Resolver.ivyStylePatterns))
+publishConfiguration := publishConfiguration.value.withOverwrite(true)
+
 libraryDependencies ++= Seq(
   "com.typesafe" % "config" % "1.3.3",
   "com.typesafe.akka" %% "akka-actor" % "2.5.21",
