--- a/template_dir/api.mustache
+++ b/template_dir/api.mustache
@@ -22,7 +22,7 @@ class {{classname}}(baseUrl: String) {
 {{/javadocRenderer}}
   def {{operationId}}({{>methodParameters}}): ApiRequest[{{>operationReturnType}}] =
     ApiRequest[{{>operationReturnType}}](ApiMethods.{{httpMethod.toUpperCase}}, baseUrl, "{{{path}}}", {{#consumes.0}}"{{{mediaType}}}"{{/consumes.0}}{{^consumes}}"application/json"{{/consumes}})
-      {{#authMethods}}{{#isApiKey}}.withApiKey(apiKeyValue, "{{keyParamName}}", {{#isKeyInQuery}}QUERY{{/isKeyInQuery}}{{#isKeyInHeader}}HEADER{{/isKeyInHeader}})
+      {{#authMethods}}{{#isApiKey}}.withApiKey(apiKeyValueFromRequest, "{{keyParamName}}", {{#isKeyInQuery}}QUERY{{/isKeyInQuery}}{{#isKeyInHeader}}HEADER{{/isKeyInHeader}})
       {{/isApiKey}}{{#isBasic}}.withCredentials(basicAuth)
       {{/isBasic}}{{/authMethods}}{{#bodyParam}}.withBody({{paramName}})
       {{/bodyParam}}{{#formParams}}.withFormParam({{>paramCreation}})
